sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#maxspeed__ungiven12/errors.duarouter
Error: Missing maxspeed definition in lane '1_1'.
Quitting (on error).
